--- a/forms.html
+++ b/forms.html
@@ -1,84 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href='http://fonts.googleapis.com/css?family=Andada' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Moar Forms</title>
 </head>
-<body>
-    <form action="http://requestb.in/1il9l8o1" method="POST">
-        <label>Name
-            <input name="name" type="text">
+    <body>
+    <h1>
+        Fill out our form
+    </h1>
+        <form action="http://requestb.in/1il9l8o1" method="POST">
+            <label>Name
+                <input name="name" type="text">
+            </label>
+            <label>Email
+                <input name="email" type="email">
+            </label>     
+            <label>Password
+                <input name="password" type="password">
+            </label>    
+            <label>Confirm Password
+                <input name="password confirm" type="">
+            </label>
+            <select name="animal">
+                <option value="" disabled selected>Please select favorite animal</option>
+                <option value="dog">Dog</option>
+                <option value="cat">Cat</option>
+                <option value="dragon">Dragon</option>
+                <option value="unicorn">Unicorn</option>
+                <option value="lab-rat">Lab Rat</option>
+            </select>
+            <label>Introduce yourself
+                <textarea name="description">
+                    Type your intro in here
+                </textarea>
+            </label>
+            <label>
+            What kind of food do you like?
         </label>
-        <br>
-        <br>        
-        <label>Email
-            <input name="email" type="email">
-        </label>
-        <br>
-        <br>        
-        <label>Password
-            <input name="password" type="password">
-        </label>
-        <br>
-        <br>        
-        <label>Confirm Password
-            <input name="password confirm" type="">
-        </label>
-        <br>
-        <br>
-        <select name="animal">
-            <option value="" disabled selected>Please select favorite animal</option>
-            <option value="dog">Dog</option>
-            <option value="cat">Cat</option>
-            <option value="dragon">Dragon</option>
-            <option value="unicorn">Unicorn</option>
-            <option value="lab-rat">Lab Rat</option>
-        </select>
-        <br>
-        <br>
-        <label>Introduce yourself
-            <textarea name="description">
-                Type your intro in here
-            </textarea>
-        </label>
-        <br>
-        <br>
-        What kind of food do you like?<label>
-            <input name="chinese" type="checkbox" value="chinese" /> Chinese
-        </label>
-        <label>
-            <input name="thai" type="checkbox" value="thai" /> Thai
-        </label>
-        <label>
-            <input name="mexican" type="checkbox" value="mexican" /> Mexican
-        </label>
-        <label>
-            <input name="italian" type="checkbox" value="italian" /> Italian
-        </label>
-        <label>
-            <input name="french" type="checkbox" value="french" /> French
-        </label>  
-        <br>
-        <br>
-        Choose color<label>
-            <input name="purple" type="radio" value="purple" /> purple
-        </label>
-        <label>
-            <input name="blue" type="radio" value="blue" /> blue
-        </label>
-        <label>
-            <input name="green" type="radio" value="green" /> green
-        </label>
-        <label>
-            <input name="fuscia" type="radio" value="fuscia" /> fuscia
-        </label>
-        <label>
-            <input name="cheeto-orange" type="radio" value="cheeto-orange" /> Cheeto orange
-        </label> 
-        <br>
-        <br>     
-        <input name="reset" type="reset" value="Reset" />
-        <input name="submit" type="submit" value="Send" />
-    </form>
+            <label>
+                <input name="chinese" type="checkbox" value="chinese" /> Chinese
+            </label>
+            <label>
+                <input name="thai" type="checkbox" value="thai" /> Thai
+            </label>
+            <label>
+                <input name="mexican" type="checkbox" value="mexican" /> Mexican
+            </label>
+            <label>
+                <input name="italian" type="checkbox" value="italian" /> Italian
+            </label>
+            <label>
+                <input name="french" type="checkbox" value="french" /> French
+            </label>  
+            <div>Choose color
+                <label>
+                    <input name="purple" type="radio" value="purple" /> purple
+                </label>
+                <label>
+                    <input name="blue" type="radio" value="blue" /> blue
+                </label>
+                <label>
+                    <input name="green" type="radio" value="green" /> green
+                </label>
+                <label>
+                    <input name="fuscia" type="radio" value="fuscia" /> fuscia
+                </label>
+                <label>
+                    <input name="cheeto-orange" type="radio" value="cheeto-orange" /> Cheeto orange
+                </label>    
+                <input name="reset" type="reset" value="Reset" />
+                <input name="submit" type="submit" value="Send" />
+            </div>
+        </form>
 </body>
 </html>
