move repo moarforms into repo frontend-week-2

--- a/forms.html
+++ b/forms.html
@@ -7,7 +7,7 @@
 </head>
     <body>
     <h1>
-        Fill out our form
+        Fill Out Our Form
     </h1>
         <form action="http://requestb.in/1il9l8o1" method="POST">
             <label>Name
