--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Cool Form</title>
+    <title>Moar Form</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="container">
